--- a/web/views/index.html
+++ b/web/views/index.html
@@ -3,5 +3,5 @@
 </sidebar>
 
 <section class="col-md-10">
-
+  <div class="well">Choose a message from the left hand side list with any other options you may want to begin.</div>
 </section>
