--- a/web/views/sidebar.html
+++ b/web/views/sidebar.html
@@ -1,5 +1,5 @@
 <nav class="sidebar">
-  <form>    
+  <form class="form-horizontal">    
     <fieldset>
       <div class="formgroup">
         <label for="sdkCommandReq">Messages</label>
