--- a/web/views/tableview.html
+++ b/web/views/tableview.html
@@ -3,16 +3,21 @@
 </sidebar>
 
 <view class="col-md-10">
-<h3><Strong>{{view.messageName}}</Strong></h3>
-
-<h4>Request</h4>
-<pre class="prettyprint" id="requestData" data-language="html">
-
-</pre>
-
-<h4>Response</h4>
-<pre  class="prettyprint" id="responseData" data-language="html">
-</pre>
+  <h3><Strong>{{view.messageName}}</Strong></h3>
+  
+  <h4>Request</h4>
+  
+  <div ng-if="!view.loaded" class="well">Please wait whilst the data is loaded</div>
+  
+  <pre class="prettyprint" ng-show="view.loaded" id="requestData" data-language="html">
+  
+  </pre>
+  
+  <h4>Response</h4>
+  <div ng-if="!view.loaded" class="well">Please wait whilst the data is loaded</div>
+  
+  <pre  class="prettyprint" ng-show="view.loaded" id="responseData" data-language="html">
+  </pre>
 
   <table class="table-responsive table-striped col-md-12">
      <thead><TR><th>Element</th></TR></thead>
