--- a/web/views/sidebar.html
+++ b/web/views/sidebar.html
@@ -1,4 +1,4 @@
-<nav class="sidebar">
+<nav class="sidebar well">
   <form class="form-horizontal">    
     <fieldset>
       <div class="formgroup">
